--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <lin rel="icon" type="image/png" href="img/techislogo.png"></lin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
@@ -32,6 +33,23 @@
           </div>
         </div>
       </nav>
+
+      <div id="about">
+          <h2><span class="font-primary">A</span>bout</h2>
+          <img src="img/sample-woman.jpg" alt="">
+          <div class="name">Kyerstin O'Neal</div>
+          <div class="vocation">Fullstack Web Developer</div>
+          <div class="skills">HTML / CSS/ JavaScript / React.js / Redux / Python / Django / Express.js / AWS(Basics) / Docker(Basics)</div>
+      </div>
+      <p class="introduction">
+          This is your introduction
+      </p>
+      <div class="email">kyerstinoneal@gmail.com</div>
+      <div class="icons">
+        <a href="https://www.linkedin.com/in/adykor/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/adykor/"><i class="bi bi-github ms-3"></i></a>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
