--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
 
       <div id="about">
           <h2><span class="font-primary">A</span>bout</h2>
-          <img src="img/headshot2.jpg" alt="">
+          <img src="img/headshot3.jpg" alt="">
           <div class="name">Kyerstin O'Neal</div>
           <div class="vocation">Fullstack Blockchain Developer</div>
           <div class="skills">HTML / CSS/ JavaScript / React.js / Redux / Python / Django / Express.js / AWS (Basics) / Docker (Basics) / Web3 / Ethereum Blockchain Deployment </div>
-      </div>
-      <p class="introduction">
-          Exceptional ability to work independently or as a team to meet goals and deadlines. Detail-oriented and eager to learn new technologies. Core competencies include JavaScript Fullstack Web Development and Ethereum Blockchain Programming with Web3. Excellent problem solving and communication skills.
-      </p>
+          <div><p class="introduction">
+            Exceptional ability to work independently or as a team to meet goals and deadlines. Detail-oriented and eager to learn new technologies. Core competencies include JavaScript Fullstack Web Development and Ethereum Blockchain Programming with Web3. Excellent problem solving and communication skills.
+        </p></div>
+        </div>
+        
+      
       <div class="email">kyerstinoneal@gmail.com</div>
       <div class="icons">
         <a href="https://github.com/adykor/"><i class="bi bi-github ms-3"></i></a>
