--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
             <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
            
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupported">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
             <span class="navbar-toggler-icon"></span>
           </button>
 
-            <div class="collapse navbar-collapse" id="navbar-toggler"></div>
+            <div class="collapse navbar-collapse" id="navbarToggler"></div>
           
             <ul class="navbar-nav me-auto mb-2">
               <li class="nav-item">
@@ -34,9 +35,10 @@
         </div>
       </nav>
 
+
       <div id="about">
           <h2><span class="font-primary">A</span>bout</h2>
-          <img src="img/headshot3.jpg" alt="">
+          <img src="img/headshot3.jpg" alt="image of Kyerstin O'Neal">
           <div class="name">Kyerstin O'Neal</div>
           <div class="vocation">Fullstack Blockchain Developer</div>
           <div class="skills">HTML / CSS/ JavaScript / React.js / Redux / Python / Django / Express.js / AWS (Basics) / Docker (Basics) / Web3 / Ethereum Blockchain Deployment </div>
@@ -54,7 +56,7 @@
       </div>
 
       <div id="project">
-          <h2><span class="font-primary">P</span>roject</h2>
+          <h2><span class="font-primary">P</span>rojects</h2>
 
           <div class="card mb-3">
             <div class="row">
@@ -64,10 +66,10 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Twitter Clone</h5>
-                  <p class="card-text">This is a Twitter-based project.</p>
+                  <p class="card-text">This is a Twitter-based project made using Django</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
-                      Email: kyerstinoneal@gmail.com <br>
+                      Email: test@gmail.com <br>
                       Pasword: 1234
                   </small></p>
                     <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
@@ -86,10 +88,10 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Netflix Clone</h5>
-                  <p class="card-text">This is a Twitter-based project.</p>
+                  <p class="card-text">This is a Netflix-based project using HTML / CSS / JS</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
-                      Email: kyerstinoneal@gmail.com <br>
+                      Email: test@gmail.com <br>
                       Pasword: 1234
                   </small></p>
                     <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
