--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="container">
             <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
            
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarToggler">
             <span class="navbar-toggler-icon"></span>
           </button>
 
             <div class="collapse navbar-collapse" id="navbarToggler"></div>
           
-            <ul class="navbar-nav me-auto mb-2">
+            <ul class="navbar-nav ms-auto mb-2">
               <li class="nav-item">
                 <a class="nav-link font-black" href="#about">About</a>
               </li>
