added ecommerce app info

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div id="about">
           <h2><span class="font-primary">A</span>bout</h2>
-          <img src="img/headshot3.jpg" alt="image of Kyerstin O'Neal">
+          <img src="img/kyerstin-image.png" alt="image of Kyerstin O'Neal">
           <div class="name">Kyerstin O'Neal</div>
           <div class="vocation">Fullstack Blockchain Developer</div>
           <div class="skills">HTML / CSS/ JavaScript / React.js / Redux / Python / Django / Express.js / AWS (Basics) / Docker (Basics) / Web3 / Ethereum Blockchain Deployment </div>
@@ -54,7 +54,7 @@
       <div class="email">kyerstinoneal@gmail.com</div>
       <div class="icons">
         <a href="https://github.com/adykor/"><i class="bi bi-github ms-3"></i></a>
-        <a href="https://www.linkedin.com/in/adykor/"><i class="bi bi-linkedin"></i></a>
+        <a href="www.linkedin.com/in/kyerstinoneal"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
 
@@ -86,19 +86,19 @@
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="img/project-netflix.png" class="img-fluid rounded-start" alt="Netflix Project">
+                <img src="img/Lemonade_Frontend.png" class="img-fluid rounded-start" alt="Netflix Project">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Netflix Clone</h5>
-                  <p class="card-text">This is a Netflix-based project using HTML / CSS / JS</p>
+                  <h5 class="card-title">E-Commerce App</h5>
+                  <p class="card-text">This is an e-commerce project using DJANGO / REACT / REDUX / HTML / CSS / JS</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
-                      Email: test@gmail.com <br>
+                      Email: admin@gmail.com <br>
                       Pasword: 1234
                   </small></p>
-                    <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                    <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                    <a href="https://frontend-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/adykor/Lemonade.git" target="_blank" class="btn btn-secondary">Github Link</a>
                 </div>
               </div>
             </div>
