--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="img/project-twitter.png" class="img-fluid rounded-start" alt="Twitter Project">
+                <img src="img/twitter_clone.png" class="img-fluid rounded-start" alt="Twitter Project">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -75,8 +75,8 @@
                       Email: test@gmail.com <br>
                       Pasword: 1234
                   </small></p>
-                    <a href="#" target="_blank" class="btn btn-secondary">Website Link</a>
-                    <a href="#" target="_blank" class="btn btn-secondary">Github Link</a>
+                    <a href="https://twitter-clone-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/adykor/twitter-clone.git" target="_blank" class="btn btn-secondary">Github Link</a>
                 </div>
               </div>
             </div>
@@ -94,7 +94,7 @@
                   <p class="card-text">This is an e-commerce project using DJANGO / REACT / REDUX / HTML / CSS / JS</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
-                      Email: admin@gmail.com <br>
+                      Email: test@gmail.com <br>
                       Pasword: 1234
                   </small></p>
                     <a href="https://frontend-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
