updated contact icons

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
         </div>
         
       
-      <div class="email">kyerstinoneal@gmail.com</div>
+      <!-- <div class="email">kyerstinoneal@gmail.com</div> -->
       <div class="icons">
+        <a href="mailto:kyerstinoneal@gmail.com"><i class="bi bi-envelope-fill ms-3"></i></a>
         <a href="https://github.com/adykor/"><i class="bi bi-github ms-3"></i></a>
-        <a href="www.linkedin.com/in/kyerstinoneal"><i class="bi bi-linkedin"></i></a>
+        <a href="www.linkedin.com/in/kyerstinoneal"><i class="bi bi-linkedin ms-3"></i></a>
         </div>
       </div>
 
@@ -81,6 +82,8 @@
               </div>
             </div>
           </div>
+
+          <br>
 
 
           <div class="card mb-3">
