added videos for twitter & lemonade apps

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <img src="img/kyerstin-image.png" alt="image of Kyerstin O'Neal">
           <div class="name">Kyerstin O'Neal</div>
           <div class="vocation">Fullstack Blockchain Developer</div>
-          <div class="skills">HTML / CSS/ JavaScript / React.js / Redux / Python / Django / Express.js / AWS (Basics) / Docker (Basics) / Web3 / Ethereum Blockchain Deployment </div>
+          <div class="skills">HTML / CSS/ JavaScript / React / Redux / Python / Django / Web3 / Ethereum Blockchain Deployment </div>
           <div><p class="introduction">
             Exceptional ability to work independently or as a team to meet goals and deadlines. Detail-oriented and eager to learn new technologies. Core competencies include JavaScript Fullstack Web Development and Ethereum Blockchain Programming with Web3. Excellent problem solving and communication skills.
         </p></div>
@@ -62,10 +62,36 @@
       <div id="projects">
           <h2><span class="font-primary">P</span>rojects</h2>
 
+
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <img src="img/twitter_clone.png" class="img-fluid rounded-start" alt="Twitter Project">
+                <video class="project-video" autoplay muted controls>
+                  <source src="video/Project_lemonade.mp4" type="video/mp4" />
+                </video>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Lemonade</h5>
+                  <p class="card-text">This is a mini e-commerce project that introduces a fresh and exciting way to sell lemonade! It’s a great way to stay refreshed this summer by ordering refreshing lemonades with a single zesty click! Saves you the commute time and expense by placing your orders from the comfort of your home!</p>
+                  <p class="card-text"><small class="text-muted">
+                      Test Login Account <br>
+                      Email: test@gmail.com <br>
+                      Pasword: 1234
+                  </small></p>
+                    <a href="https://frontend-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/adykor/Lemonade.git" target="_blank" class="btn btn-secondary">Github Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <video class="project-video" autoplay muted controls>
+                  <source src="video/project_twitter.mp4" type="video/mp4" />
+                </video>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -85,27 +111,6 @@
 
           <br>
 
-
-          <div class="card mb-3">
-            <div class="row">
-              <div class="col-md-4">
-                <img src="img/Lemonade_Frontend.png" class="img-fluid rounded-start" alt="Netflix Project">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">E-Commerce App</h5>
-                  <p class="card-text">This is an e-commerce project using DJANGO / REACT / REDUX / HTML / CSS / JS</p>
-                  <p class="card-text"><small class="text-muted">
-                      Test Login Account <br>
-                      Email: test@gmail.com <br>
-                      Pasword: 1234
-                  </small></p>
-                    <a href="https://frontend-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
-                    <a href="https://github.com/adykor/Lemonade.git" target="_blank" class="btn btn-secondary">Github Link</a>
-                </div>
-              </div>
-            </div>
-          </div>
 
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
