--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div id="about">
           <h2><span class="font-primary">A</span>bout</h2>
           <img src="img/kyerstin-image.png" alt="image of Kyerstin O'Neal">
-          <div class="name">Kyerstin O'Neal</div>
+          <div class="name">Kyērstin O'Neal</div>
           <div class="vocation">Fullstack Blockchain Developer</div>
           <div class="skills">HTML / CSS/ JavaScript / React / Redux / Python / Django / Web3 / Ethereum Blockchain Deployment </div>
           <div><p class="introduction">
@@ -85,6 +85,8 @@
               </div>
             </div>
           </div>
+
+          <br>
 
           <div class="card mb-3">
             <div class="row">
