--- a/blockchain.html
+++ b/blockchain.html
@@ -80,7 +80,7 @@
           <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                  <img src="img/blockchain/sailorMoon.png" alt="">
+                  <img src="img/blockchain/temp_dapp_signin.png" alt="">
                 <!-- <video class="project-video" autoplay muted controls>
                   <source src="video/Project_lemonade.mp4" type="video/mp4" />
                 </video> -->
@@ -94,8 +94,9 @@
                       Email: test@gmail.com <br>
                       Pasword: 1234
                   </small></p>
+                  <!-- TODO: UPDATE WEBSITE LINK -->
                     <a href="https://frontend-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
-                    <a href="https://github.com/adykor/Lemonade.git" target="_blank" class="btn btn-secondary">Github Link</a>
+                    <a href="https://github.com/adykor/dappWallet.git" target="_blank" class="btn btn-secondary">Github Link</a>
                 </div>
               </div>
             </div>
@@ -103,30 +104,28 @@
 
           <br>
 
-          <!-- <div class="card mb-3">
+          <div class="card mb-3">
             <div class="row">
               <div class="col-md-4">
-                <video class="project-video" autoplay muted controls>
+                <!-- <video class="project-video" autoplay muted controls>
                   <source src="video/project_twitter.mp4" type="video/mp4" />
-                </video>
+                </video> -->
+                <img src="img/blockchain/sailorMoon.png" alt="">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Twitter Clone</h5>
-                  <p class="card-text">This is a Twitter-based project made using Django</p>
-                  <p class="card-text"><small class="text-muted">
-                      Test Login Account <br>
-                      Email: test@gmail.com <br>
-                      Pasword: 1234
-                  </small></p>
-                    <a href="https://twitter-clone-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                  <h5 class="card-title">NFTs</h5>
+                  <p class="card-text">Here are a series of NFTs created using Photoshop and published to OpenSea.</p>
+                  <!-- TODO: UPDATE LINKS -->
+                    <a href="https://twitter-clone-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">OpenSea Link</a>
                     <a href="https://github.com/adykor/twitter-clone.git" target="_blank" class="btn btn-secondary">Github Link</a>
                 </div>
               </div>
             </div>
           </div>
 
-          <br> -->
+          <br>
+          <br>
           
 <!-- LINKS TO OTHER SKILLSETS -->
 
