updated order of pages

--- a/blockchain.html
+++ b/blockchain.html
@@ -49,6 +49,7 @@
           <h2><span class="font-primary">A</span>bout</h2>
           <img src="img/kyerstin-image.png" alt="image of Kyerstin O'Neal">
           <div class="name">Kyērstin O'Neal</div>
+          <!-- Ethereum Blockchain Developer? -->
           <div class="vocation">Fullstack Blockchain Developer</div>
           <div class="skills">Fullstack Web Developer / Web3 / Ethereum Blockchain Deployment </div>
 
@@ -88,7 +89,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">dApp Wallet</h5>
-                  <p class="card-text">This is dApp wallet that allows users to sign in and connect with their MetaMask wallets.</p>
+                  <p class="card-text">This is dApp built on the Ethereum Blockchain using Web3 that allows users to sign in and connect to their MetaMask wallets to get transactions, balances and NFTs.</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
                       Email: test@gmail.com <br>
@@ -115,7 +116,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">NFTs</h5>
-                  <p class="card-text">Here are a series of NFTs created using Photoshop and published to OpenSea.</p>
+                  <p class="card-text">Here are a series of NFTs I created using Photoshop and published to OpenSea.</p>
                   <!-- TODO: UPDATE LINKS -->
                     <a href="https://twitter-clone-kyerstin.herokuapp.com/" target="_blank" class="btn btn-secondary">OpenSea Link</a>
                     <a href="https://github.com/adykor/twitter-clone.git" target="_blank" class="btn btn-secondary">Github Link</a>
@@ -154,8 +155,6 @@
               </div>
             </div>
           </div>
-
-          <br>
 
 
 
