--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <h2><span class="font-primary">A</span>bout</h2>
           <img src="img/kyerstin-image.png" alt="image of Kyerstin O'Neal">
           <div class="name">Kyērstin O'Neal</div>
-          <div class="vocation">Fullstack Blockchain Developer</div>
-          <div class="skills">HTML / CSS / JavaScript / React / Redux / Python / Django / Web3 / Ethereum Blockchain Deployment </div>
+          <div class="vocation">Fullstack Web Developer</div>
+          <div class="skills">HTML / CSS / Python / JavaScript / React / Redux / Django / Git </div>
 
         <!-- SKILLS ICONS -->
           <!-- <div class="parent">
@@ -86,7 +86,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Lemonade</h5>
-                  <p class="card-text">This is a mini e-commerce project that introduces a fresh and exciting way to sell lemonade! It’s a great way to stay refreshed this summer by ordering refreshing lemonades with a single zesty click! Saves you the commute time and expense by placing your orders from the comfort of your home!</p>
+                  <p class="card-text">This is a mini e-commerce project that introduces a fresh and exciting way to sell lemonade! It’s a great way to stay refreshed this summer by ordering handcrafted lemonades with a single click! Saves you the commute time and expense by placing your orders from the comfort of your home!</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
                       Email: test@gmail.com <br>
@@ -124,6 +124,7 @@
             </div>
           </div>
 
+          <br>
           <br>
           
         <!-- LINKS TO OTHER SKILLSETS -->
