--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <img src="img/kyerstin-image.png" alt="image of Kyerstin O'Neal">
           <div class="name">Kyērstin O'Neal</div>
           <div class="vocation">Fullstack Web Developer</div>
-          <div class="skills">HTML / CSS / Python / JavaScript / React / Redux / Django / Git </div>
+          <div class="skills">Python / HTML / CSS / Git / JavaScript / SQL / Django / React / Redux</div>
 
         <!-- SKILLS ICONS -->
           <!-- <div class="parent">
@@ -74,6 +74,28 @@
 
       <div id="projects">
           <h2><span class="font-primary">P</span>rojects</h2>
+
+
+          <div class="card mb-3">
+            <div class="row">
+              <div class="col-md-4">
+                <video class="project-video" autoplay muted controls>
+                  <source src="video/DreamHouse.mp4" type="video/mp4" />
+                </video>
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Dream House</h5>
+                  <p class="card-text">This is an e-commerce website where you can buy, sell, lease, or rent properties. You can sign up/sign in to use the website and easily search for properties using the location, prices, and other aspects while looking for the perfect place! Detailed information about all the listed properties is provided along with verified images for easy navigation and your safety.
+                  </p>
+                    <a href="https://frontend-dream-house.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
+                    <a href="https://github.com/DreamHouseProject2/Dream-House" target="_blank" class="btn btn-secondary">Github Link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <br>
 
 
           <div class="card mb-3">
@@ -111,7 +133,7 @@
               <div class="col-md-8">
                 <div class="card-body">
                   <h5 class="card-title">Twitter Clone</h5>
-                  <p class="card-text">This is a Twitter-based project made using Django</p>
+                  <p class="card-text">Users can post tweets and see other tweets in this app. To keep the project simple, I did not include sign-up/login functionality. But you can learn CRUD(Create/Read/Update/Delete) through this project.</p>
                   <p class="card-text"><small class="text-muted">
                       Test Login Account <br>
                       Email: test@gmail.com <br>
@@ -123,6 +145,11 @@
               </div>
             </div>
           </div>
+
+          <br>
+
+          
+        
 
           <br>
           <br>
@@ -182,10 +209,16 @@
             </div>
             <br>
 
-
-
       </div>
     </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <footer>
+      <div class="icons">
+        <a href="mailto:kyerstinoneal@gmail.com"><i class="bi bi-envelope-fill ms-3"></i></a>
+        <a href="https://github.com/adykor/"><i class="bi bi-github ms-3"></i></a>
+        <a href="https://www.linkedin.com/in/kyerstin-oneal/"><i class="bi bi-linkedin ms-3"></i></a>
+        </div>
+      </div>
+    </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
